@@ -1,3 +1,4 @@
+* Code cleanup: requested_key -> request_key.
 * [Bug 833] ignore whitespace at end of remote configuration lines
 * [Bug 1033] ntpdc/ntpq crash prompting for keyid on Windows
 * [Bug 1154] mDNS registration should be done later, repeatedly and only
